--- a/src/ApplicationUI/updateProject.fxml
+++ b/src/ApplicationUI/updateProject.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.createProjectController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.updateProjectController">
     <children>
         <AnchorPane prefHeight="605.0" prefWidth="800.0">
             <children>
@@ -25,7 +27,7 @@
                                     <children>
                                         <AnchorPane layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css">
                                             <children>
-                                                <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="Create Project" textAlignment="CENTER" textFill="WHITE">
+                                                <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="Modify Project" textAlignment="CENTER" textFill="WHITE">
                                                     <font>
                                                         <Font size="36.0" />
                                                     </font>
@@ -35,49 +37,63 @@
                                                         <Image url="@supervisorDashManageProj.png" />
                                                     </image>
                                                 </ImageView>
-                                                <Text layoutX="740.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create" textAlignment="CENTER" />
+                                                <Text layoutX="740.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify" textAlignment="CENTER" />
                                             </children>
                                         </AnchorPane>
                                         <AnchorPane layoutX="-1.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
                                             <children>
                                                 <Separator layoutY="1.0" prefHeight="2.0" prefWidth="806.0" />
-                                                <Pane layoutX="169.0" layoutY="233.0" prefHeight="179.0" prefWidth="467.0" styleClass="card" stylesheets="@application.css">
+                                                <Pane layoutX="169.0" layoutY="67.0" prefHeight="378.0" prefWidth="467.0" styleClass="card" stylesheets="@application.css">
                                                     <children>
-                                                        <Button fx:id="goBackButton" layoutX="251.0" layoutY="127.0" mnemonicParsing="false" onAction="#gotoSupervisorDashboard" prefHeight="34.0" prefWidth="122.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                                                        <Button fx:id="goBackButton" layoutX="334.0" layoutY="330.0" mnemonicParsing="false" onAction="#gotoSupervisorDashboard" prefHeight="34.0" prefWidth="122.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
                                                             <styleClass>
                                                                 <String fx:value="Button" />
                                                                 <String fx:value="font" />
                                                                 <String fx:value="secondaryButton" />
                                                             </styleClass>
                                                         </Button>
-                                                        <Label fx:id="taskNameLabel" layoutX="26.0" layoutY="23.0" styleClass="font" stylesheets="@application.css" text="Enter FYP Name:" textFill="WHITE">
+                                                        <Label fx:id="taskNameLabel" layoutX="19.0" layoutY="243.0" styleClass="font" stylesheets="@application.css" text="Enter FYP Name:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="24.0" />
                                                             </font>
                                                         </Label>
-                                                        <TextField fx:id="fypNameField" layoutX="227.0" layoutY="26.0" prefHeight="26.0" prefWidth="229.0" />
-                                                        <Button fx:id="createProjectButton" layoutX="94.0" layoutY="126.0" mnemonicParsing="false" onAction="#createProject" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Next">
+                                                        <TextField fx:id="fypNameField" layoutX="220.0" layoutY="246.0" prefHeight="26.0" prefWidth="229.0" />
+                                                        <Button fx:id="updateButton" layoutX="17.0" layoutY="329.0" mnemonicParsing="false" onAction="#updateProjectdetails" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Update">
                                                             <styleClass>
                                                                 <String fx:value="Button" />
                                                                 <String fx:value="font" />
                                                                 <String fx:value="primaryButton" />
                                                             </styleClass>
                                                         </Button>
-                                                        <Text fx:id="errorTextField" fill="RED" layoutX="223.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                                                        <Label fx:id="taskNameLabel1" layoutX="72.0" layoutY="65.0" styleClass="font" stylesheets="@application.css" text="Enter Status:" textFill="WHITE">
+                                                        <Label fx:id="taskNameLabel1" layoutX="69.0" layoutY="285.0" styleClass="font" stylesheets="@application.css" text="Enter Status:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="24.0" />
                                                             </font>
                                                         </Label>
-                                                        <TextField fx:id="fypStatusField" layoutX="227.0" layoutY="65.0" prefHeight="26.0" prefWidth="229.0" />
-                                                        <Text fx:id="createErrorMsg" fill="RED" layoutX="223.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
+                                                        <TextField fx:id="fypStatusField" layoutX="220.0" layoutY="285.0" prefHeight="26.0" prefWidth="229.0" />
+                                                        <Text fx:id="createErrorMsg" fill="RED" layoutX="220.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="28.0" />
+                                                        <Label fx:id="taskNameLabel2" layoutX="60.0" layoutY="209.0" styleClass="font" stylesheets="@application.css" text="Enter FYP ID:" textFill="WHITE">
+                                                            <font>
+                                                                <Font size="24.0" />
+                                                            </font>
+                                                        </Label>
+                                                        <TextField fx:id="fypIDTextField" layoutX="220.0" layoutY="209.0" prefHeight="26.0" prefWidth="229.0" />
+                                                        <TableView fx:id="tableView" layoutX="91.0" layoutY="14.0" prefHeight="161.0" prefWidth="287.0">
+                                                            <columns>
+                                                                <TableColumn fx:id="fypIDCol" prefWidth="75.0" text="FYP ID" />
+                                                                <TableColumn fx:id="fypNameCol" prefWidth="128.79998779296875" text="Name" />
+                                                                <TableColumn fx:id="fypStatusCol" prefWidth="78.39996337890625" text="Status" />
+                                                            </columns>
+                                                        </TableView>
+                                          <Button fx:id="modifyTeamButton" layoutX="177.0" layoutY="329.0" mnemonicParsing="false" onAction="#modifyTeam" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Modify Team">
+                                             <styleClass>
+                                                <String fx:value="Button" />
+                                                <String fx:value="font" />
+                                                <String fx:value="primaryButton" />
+                                             </styleClass>
+                                          </Button>
                                                     </children>
                                                 </Pane>
-                                                <ImageView fitHeight="160.0" fitWidth="258.0" layoutX="274.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@createProjectRobot.png" />
-                                                    </image>
-                                                </ImageView>
                                             </children>
                                         </AnchorPane>
                                     </children>
