--- a/src/ApplicationUI/progressReport.fxml
+++ b/src/ApplicationUI/progressReport.fxml
@@ -3,8 +3,6 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -62,12 +60,6 @@
                                                           </font>
                                                       </Button>
                                           <TextField fx:id="teamIDTextField" layoutX="198.0" layoutY="269.0" />
-                                          <MenuButton fx:id="reportTypeMenu" layoutX="198.0" layoutY="312.0" mnemonicParsing="false" text="Type of report">
-                                            <items>
-                                              <MenuItem mnemonicParsing="false" text="Action 1" />
-                                              <MenuItem mnemonicParsing="false" text="Action 2" />
-                                            </items>
-                                          </MenuButton>
                                           <Label fx:id="teamIdLabel1" layoutX="61.0" layoutY="311.0" styleClass="font" stylesheets="@application.css" text="Select Type:" textFill="WHITE">
                                              <font>
                                                 <Font size="24.0" />
@@ -95,6 +87,7 @@
                                              </image>
                                           </ImageView>
                                           <Text fx:id="errorTextField" fill="WHITE" layoutX="34.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                                          <Button fx:id="reportTypeButton" layoutX="198.0" layoutY="312.0" mnemonicParsing="false" onAction="#changeReportType" prefHeight="25.0" prefWidth="56.0" text="Short" />
                                        </children>
                                     </Pane>
                                             </children>
