--- a/src/ApplicationUI/progressReport.fxml
+++ b/src/ApplicationUI/progressReport.fxml
@@ -3,11 +3,13 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -75,7 +77,7 @@
                                                 <Font size="14.0" />
                                              </font>
                                           </Button>
-                                          <TableView fx:id="teamTable" layoutX="369.0" layoutY="40.0" prefHeight="358.0" prefWidth="151.0">
+                                          <TableView fx:id="teamTable" layoutX="369.0" layoutY="62.0" prefHeight="336.0" prefWidth="151.0">
                                             <columns>
                                               <TableColumn fx:id="teamIDColumn" prefWidth="60.0" text="Team ID" />
                                               <TableColumn fx:id="teamNameColumn" prefWidth="91.2000732421875" text="Team Name" />
@@ -88,6 +90,12 @@
                                           </ImageView>
                                           <Text fx:id="errorTextField" fill="WHITE" layoutX="34.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                                           <Button fx:id="reportTypeButton" layoutX="198.0" layoutY="312.0" mnemonicParsing="false" onAction="#changeReportType" prefHeight="25.0" prefWidth="56.0" text="Short" />
+                                          <RadioButton fx:id="topRadio" layoutX="369.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateTeamTable" styleClass="font" text="Assigned Team" textFill="WHITE">
+                                             <toggleGroup>
+                                                <ToggleGroup fx:id="teamSelection" />
+                                             </toggleGroup>
+                                          </RadioButton>
+                                          <RadioButton fx:id="bottomRadio" layoutX="369.0" layoutY="38.0" mnemonicParsing="false" onAction="#updateTeamTable" selected="true" styleClass="font" text="All Team" textFill="WHITE" toggleGroup="$teamSelection" />
                                        </children>
                                     </Pane>
                                             </children>
